--- a/app/src/main/res/layout/fragment_eliminar_jugador.xml
+++ b/app/src/main/res/layout/fragment_eliminar_jugador.xml
@@ -34,13 +34,13 @@
             android:textSize="20dp" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName4"
+            android:id="@+id/txtEliminarJugador"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
             android:minHeight="48dp"
-            android:text="." />
+            tools:ignore="SpeakableTextPresentCheck" />
     </LinearLayout>
 
     <LinearLayout
@@ -54,14 +54,14 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnRegresar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="45dp"
-            android:text="Eliminar" />
+            android:text="Regresar" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnEliminarJugador"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Eliminar" />
