--- a/app/src/main/res/layout/lista_item_jugador.xml
+++ b/app/src/main/res/layout/lista_item_jugador.xml
@@ -11,9 +11,9 @@
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
+            android:layout_width="45dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="4"
             app:srcCompat="@drawable/ic_user_jugador" />
 
         <TextView
@@ -26,7 +26,7 @@
         <TextView
             android:id="@+id/viewApellido"
             android:layout_width="wrap_content"
-            android:layout_height="45dp"
+            android:layout_height="46dp"
             android:layout_weight="1"
             android:textSize="16sp" />
 
@@ -44,7 +44,6 @@
             android:layout_width="wrap_content"
             android:layout_height="46dp"
             android:layout_weight="1"
-            android:text=" #"
             android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
