--- a/app/src/main/res/layout/fragment_eliminar_partido.xml
+++ b/app/src/main/res/layout/fragment_eliminar_partido.xml
@@ -4,15 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EliminarJugadorFragment">
+    tools:context=".EliminarPartido">
 
     <LinearLayout
+
+        android:id="@+id/linearLayout8"
         android:layout_width="386dp"
         android:layout_height="253dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="13dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -21,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
-            android:text="Eliminar jugador"
+            android:text="Eliminar partido"
             android:textSize="25dp"
             android:textStyle="bold" />
 
@@ -30,11 +34,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
-            android:text="Digite el numero de jugador a dar de baja"
+            android:text="Digite el numero d partido para eliminarlo"
             android:textSize="20dp" />
 
         <EditText
-            android:id="@+id/txtEliminarJugador"
+            android:id="@+id/txtEliminarPartido"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -46,12 +50,13 @@
     <LinearLayout
         android:layout_width="369dp"
         android:layout_height="53dp"
-        android:layout_marginBottom="72dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="237dp"
+        android:layout_marginEnd="22dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">
 
         <Button
             android:id="@+id/btnRegresarPartido"
@@ -61,7 +66,7 @@
             android:text="Regresar" />
 
         <Button
-            android:id="@+id/btnEliminarJugador"
+            android:id="@+id/btnEliminarPartido"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Eliminar" />
