--- a/app/src/main/res/layout/fragment_registrar_partido.xml
+++ b/app/src/main/res/layout/fragment_registrar_partido.xml
@@ -122,28 +122,28 @@
 
     <EditText
         android:id="@+id/txtGolesFavor"
-        android:layout_width="73dp"
-        android:layout_height="39dp"
+        android:layout_width="84dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="208dp"
+        android:layout_marginEnd="196dp"
         android:ems="10"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView17"
         app:layout_constraintTop_toBottomOf="@+id/txtNombreRival"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/txtGolesContra"
-        android:layout_width="73dp"
-        android:layout_height="44dp"
+        android:layout_width="81dp"
+        android:layout_height="41dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.005"
         app:layout_constraintStart_toEndOf="@+id/textView19"
         app:layout_constraintTop_toBottomOf="@+id/txtGolesFavor"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
